--- a/JavaScript/speedTest.html
+++ b/JavaScript/speedTest.html
@@ -44,7 +44,8 @@
                 asyncWorker.stop();
             }
             asyncWorker = fuzzierMatcher.getAsyncWorker(
-                stringsToSearch, fuzzierMatcher.getScore, showBestMatchScore
+                stringsToSearch.values(), fuzzierMatcher.getScore, 
+                showBestMatchScore
                 );
             output.innerText = "Searching...";
             asyncWorker.start();
